--- a/Grid/index.html
+++ b/Grid/index.html
@@ -9,11 +9,13 @@
 </head>
 <body>
     <div class="container">
-        <div class="box" id="box1">abcd</div>
-        <div class="box" id="box2">bcd</div>
-        <div class="box" id="box3">bcd</div>
-        <div class="box" id="box5">bcd</div> 
-        <div class="box" id="box4">bcd</div>
+        <div class="box" id="header">Header</div>
+        <div class="box" id="sidebar">Side bar</div>
+        <div class="box" id="content">Content</div>
+        <div class="box" id="footer">footer</div>
+        <div class="box" id="content">Content2</div>
+        <div class="box" id="footer">footer2</div>  
+        <!-- <div class="box" id="box4">bcd</div> -->
         
         <!-- <div class="box">bcd</div>
         <div class="box">dcd</div>
