--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="nav-items">
                     <div><a href="#projects">Projects</a></div>
-                    <div><a href="#skills">Skills</a></div>
+                    <div><a href="#Skills">Skills</a></div>
                     <div><a href="#contactme">Contact Me</a></div>
                 </div>
             </div>
@@ -59,7 +59,7 @@
             </div>
         </div>
 
-        <div class="project-section">
+        <div class="project-section" id="projects">
           <h2 class="page-header">Projects</h2>
           <div class="project-container">
 
@@ -93,7 +93,7 @@
 
             <div class="project-card" id="project2">
               <div class="project-number project-number-left">02</div>
-              <div class="project-content .project-content-right">
+              <div class="project-content project-content-right">
                 <div class="project-skills-container">
                   <img class="project-skill" src="./images/stack/HTML.png" alt="">
                   <img class="project-skill" src="./images/stack/CSS.png" alt="">
@@ -144,7 +144,7 @@
 
             <div class="project-card" id="project4">
               <div class="project-number project-number-left">04</div>
-              <div class="project-content .project-content-right">
+              <div class="project-content project-content-right">
                 <div class="project-skills-container">
                   <img class="project-skill" src="./images/stack/HTML.png" alt="">
                   <img class="project-skill" src="./images/stack/CSS.png" alt="">
@@ -210,6 +210,49 @@
             </div>
 
         </div>
+
+        <div class="contactus-form-container" id="contactme">
+          <div class="container">
+            <h1 class="contactus-heading">Contact Me</h1>
+            <h3 class="contactus-sub-heading">Questions, thought, or just want to say hello?</h3>
+            <div class="contactus-form-container">
+              <form  class="form"action="">
+                <div class="formfield-container">
+                  <input class="formfield"type="text" name="name" id="" placeholder="Enter your Name">
+                  <input class="formfield"type="Email" name="email" id="" placeholder="Enter your Email Address">
+                  <input class="formfield"type="text" name="subject" id="" placeholder="Enter your Subject">
+                  <textarea class="formfield formfield-textarea" name="message" id="" cols="30" rows="10" placeholder="Enter your Message"></textarea>
+                </div>
+                  <div>
+                    <button type="submit" class="btn-pink" id="submit-btn">Send Message <i class="submit-icon fa-solid fa-paper-plane"></i></button>
+                  </div>
+              </form>
+            </div>
+          </div>
+        </div>
+
+        <footer>
+          <div class="container">
+            <div class="footer-wrapper">
+              <div class="footer-faded-text">Ganesh Makashe</div>
+              <div class="link-wrapper">
+                <div>
+                  <a href="#projects">Projects</a>
+                  <a href="#Skills">Skills</a>
+                  <a href="#contactme">Contact US</a>
+                </div>
+              </div>
+              <div class="icon-wrapper">
+                <i class="fa-brands fa-linkedin icon"></i>
+                <i class="fa-brands fa-github icon"></i>
+                <i class="fa-brands fa-twitter icon"></i>
+                <i class="fa-brands fa-instagram icon"></i>
+                <i class="fa-brands fa-envelope icon"></i>
+              </div>
+            </div>
+          </div>
+        </footer>
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src="https://kit.fontawesome.com/58a810656e.js" crossorigin="anonymous"></script>
